[gd_scene load_steps=12 format=3 uid="uid://c1r6apfs6eb8j"]

[ext_resource type="Script" uid="uid://dc5csltpb6sdj" path="res://assets/scripts/camera/Camera.gd" id="1_r7vh5"]
[ext_resource type="PackedScene" uid="uid://cvynv7sgqowum" path="res://assets/components/velocityComponent/velocityComponent.tscn" id="2_rb4ck"]
[ext_resource type="PackedScene" uid="uid://cmyxa8pfmhpcy" path="res://assets/components/inputComponent/inputComponent.tscn" id="3_jchmi"]
[ext_resource type="PackedScene" uid="uid://1d1rfqprpnrb" path="res://assets/scenes/ui/Hud.tscn" id="5_27on2"]
[ext_resource type="AudioStream" uid="uid://d1ve0476451lw" path="res://assets/resources/killsoundStream.tres" id="5_q4ckx"]
[ext_resource type="AudioStream" uid="uid://k5gdem56qgha" path="res://assets/sounds/gore/fleshImpacts/bulletImpacts/bulletBody9.wav" id="7_p4i6y"]
[ext_resource type="AudioStream" uid="uid://blj5l7iianm2y" path="res://assets/sounds/gore/fleshImpacts/bulletImpacts/bulletBody2.wav" id="9_0ng1w"]
[ext_resource type="AudioStream" uid="uid://ddew5bof56sx" path="res://assets/sounds/gore/fleshImpacts/bulletImpacts/bulletBody10.wav" id="9_p4i6y"]
[ext_resource type="PackedScene" uid="uid://7hcwtpln33no" path="res://assets/scenes/ui/tabmenu/TabMenu.tscn" id="19_jpkgf"]

[sub_resource type="SphereShape3D" id="SphereShape3D_seysn"]
radius = 0.55

[sub_resource type="AudioStreamRandomizer" id="AudioStreamRandomizer_bpylg"]
random_pitch = 1.05
random_volume_offset_db = 0.5
streams_count = 3
stream_0/stream = ExtResource("9_0ng1w")
stream_1/stream = ExtResource("9_p4i6y")
stream_2/stream = ExtResource("7_p4i6y")

[node name="Camera" type="CharacterBody3D" node_paths=PackedStringArray("velocityComponent", "inputComponent")]
physics_interpolation_mode = 1
collision_layer = 0
collision_mask = 0
motion_mode = 1
platform_floor_layers = 4294901760
script = ExtResource("1_r7vh5")
camRecoilStrength = 8.0
camReturnSpeed = 15.0
camRecoil = Vector3(5, 1, 0.25)
recoilReturnSpeed = 9.0
zoomSpeed = 40.0
velocityComponent = NodePath("velocityComponent")
inputComponent = NodePath("inputComponent")

[node name="camPivot" type="Node3D" parent="."]

[node name="horizonal" type="Node3D" parent="camPivot"]

[node name="vertholder" type="Node3D" parent="camPivot/horizonal"]

[node name="vertical" type="Node3D" parent="camPivot/horizonal/vertholder"]

[node name="springArm3d" type="SpringArm3D" parent="camPivot/horizonal/vertholder/vertical"]
collision_mask = 3
shape = SubResource("SphereShape3D_seysn")

[node name="Camera" type="Camera3D" parent="camPivot/horizonal/vertholder/vertical/springArm3d"]

[node name="RayCast3D" type="RayCast3D" parent="camPivot/horizonal/vertholder/vertical/springArm3d/Camera"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0, -1.12949)
target_position = Vector3(0, 0, -250)
collision_mask = 23
collide_with_areas = true

[node name="camRayEnd" type="Marker3D" parent="camPivot/horizonal/vertholder/vertical/springArm3d/Camera/RayCast3D"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0, -250.5)

[node name="debugCast" type="RayCast3D" parent="camPivot/horizonal/vertholder/vertical/springArm3d/Camera"]
target_position = Vector3(0, 0, -250)
collision_mask = 8

[node name="interactCast" type="RayCast3D" parent="camPivot/horizonal/vertholder/vertical/springArm3d/Camera"]
target_position = Vector3(0, 0, -3.5)
collision_mask = 43

[node name="editorCast" type="RayCast3D" parent="camPivot/horizonal/vertholder/vertical/springArm3d/Camera"]
target_position = Vector3(0, 0, -550)
collision_mask = 43
debug_shape_custom_color = Color(0.486527, 0.198577, 0.426441, 1)

[node name="velocityComponent" parent="." instance=ExtResource("2_rb4ck")]
vAcceleration = 3.0

[node name="inputComponent" parent="." instance=ExtResource("3_jchmi")]

[node name="HUD" parent="." node_paths=PackedStringArray("cam") instance=ExtResource("5_27on2")]
cam = NodePath("../camPivot/horizonal/vertholder/vertical/springArm3d/Camera")

[node name="killSound" type="AudioStreamPlayer" parent="."]
stream = ExtResource("5_q4ckx")
volume_db = 2.0
max_polyphony = 10
bus = &"Sounds"

[node name="headshotSound" type="AudioStreamPlayer" parent="."]
stream = SubResource("AudioStreamRandomizer_bpylg")
volume_db = 2.5
bus = &"Sounds"

[node name="TabMenu" parent="." instance=ExtResource("19_jpkgf")]
visible = false
